--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,8 +4,8 @@
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["./src/*"]
     },
-    "types": ["node", "vite/client", "vitest"],
+    "types": ["node", "vite/client", "vitest"]
   }
 }
