--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,6 @@
       "path": "./tsconfig.vitest.json"
     }
   ],
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.vue",
-  ],
-    "exclude": [
-        "node_modules",
-        "dist",
-        "src/**/*.test.ts",
-    ]
+  "include": ["src/**/*.ts", "src/**/*.vue"],
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts"]
 }
