--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,22 +1,22 @@
 {
   "useTabs": false,
   "tabWidth": 2,
-  "printWidth": 100,
+  "printWidth": 120,
   "singleQuote": false,
   "trailingComma": "all",
   "bracketSpacing": true,
   "semi": false,
   "arrowParens": "avoid",
   "endOfLine": "auto",
-  "overrides": [
-    {
-      "files": "*.json",
-      "options": {
-        "tabWidth": 2
-      }
-    }
-  ],
   "htmlWhitespaceSensitivity": "ignore",
   "vueIndentScriptAndStyle": true,
-  "filepath": "src/App.vue"
+  "filepath": "src/App.vue",
+  "parser": "vue",
+  "plugins": [
+    "prettier-eslint"
+  ],
+  "editorconfig": true,
+  "prettier-eslint": {
+    "eslintPath": "node_modules/eslint"
+  }
 }
