--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prettier:check": "prettier --check .",
+    "sort": "sort-package-json"
   },
   "dependencies": {
     "pinia": "^2.0.23",
@@ -35,6 +37,8 @@
     "jsdom": "^20.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
+    "prettier-plugin-packagejson": "^2.3.0",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vitest": "^0.24.3",
