--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sort": "sort-package-json"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
@@ -38,7 +39,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
-    "prettier-plugin-packagejson": "^2.3.0",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vitest": "^0.24.3",
