--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "animanga-vue",
-  "version": "0.0.0",
+  "description": "Animanga project made with Vue3",
+  "version": "0.1.0",
+  "author": "Yohann Hommmet <hommet.yohann@gmail.com",
+  "private": false,
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -11,15 +14,15 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "prettier": "prettier --write .",
-    "prettier:check": "prettier --check .",
     "sort": "sort-package-json"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^3.2.0",
     "axios": "^1.1.3",
     "pinia": "^2.0.23",
+    "vite": "^3.2.4",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
@@ -27,20 +30,16 @@
     "@types/node": "^16.11.68",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
-    "@vitejs/plugin-vue": "^3.1.2",
     "@vitest/coverage-c8": "^0.25.1",
-    "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.1.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "prettier-eslint": "^15.0.1",
     "typescript": "~4.7.4",
-    "vite": "^3.1.8",
     "vitest": "^0.24.3",
     "vue-tsc": "^1.0.8"
   }
