--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "Animanga project made with Vue3",
   "version": "0.1.0",
   "author": "Yohann Hommmet <hommet.yohann@gmail.com",
-  "private": false,
+  "license": "MIT",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -16,12 +17,19 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "sort": "sort-package-json"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "axios": "^1.1.3",
     "pinia": "^2.0.23",
     "vite": "^3.2.4",
     "vue": "^3.2.41",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
