--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     }
   ],
   "include": ["src/**/*.ts", "src/**/*.vue"],
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "tests"]
 }
