--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn run build --if-present
-    - run: yarn test
+    - run: yarn
+    - run: yarn lint
+    - run: yarn build
+    - run: yarn test:coverage
