--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "sort": "sort-package-json"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue}": [
@@ -39,13 +38,15 @@
     "@typescript-eslint/parser": "^5.42.1",
     "@vitest/coverage-c8": "^0.25.1",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.1.0",
+    "@vue/test-utils": "^2.2.6",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.2",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "typescript": "~4.7.4",
     "vitest": "^0.24.3",
     "vue-tsc": "^1.0.8"
