--- a/package.json
+++ b/package.json
@@ -23,32 +23,33 @@
     ]
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "axios": "^1.2.1",
-    "pinia": "^2.0.28",
-    "vite": "^4.0.2",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.6"
+    "@vitejs/plugin-vue": "~4.0.0",
+    "axios": "~1.2.2",
+    "pinia": "~2.0.28",
+    "vite": "~4.0.3",
+    "vue": "~3.2.45",
+    "vue-router": "~4.1.6"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/jsdom": "^20.0.0",
-    "@types/node": "^16.11.68",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "@vitest/coverage-c8": "^0.25.1",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.2.6",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.22.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.2",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
-    "typescript": "~4.7.4",
-    "vitest": "^0.24.3",
-    "vue-tsc": "^1.0.8"
+    "@fullhuman/postcss-purgecss": "~5.0.0",
+    "@rushstack/eslint-patch": "~1.2.0",
+    "@types/jsdom": "~20.0.1",
+    "@types/node": "~18.11.18",
+    "@typescript-eslint/eslint-plugin": "~5.48.0",
+    "@typescript-eslint/parser": "~5.48.0",
+    "@vitest/coverage-c8": "~0.26.3",
+    "@vue/eslint-config-typescript": "~11.0.2",
+    "@vue/test-utils": "~2.2.6",
+    "@vue/tsconfig": "~0.1.3",
+    "eslint": "~8.31.0",
+    "eslint-plugin-import": "~2.26.0",
+    "eslint-plugin-vue": "~9.8.0",
+    "jsdom": "~20.0.3",
+    "npm-run-all": "~4.1.5",
+    "sass": "~1.57.1",
+    "sass-loader": "~13.2.0",
+    "typescript": "~4.9.4",
+    "vitest": "~0.26.3",
+    "vue-tsc": "~1.0.19"
   }
 }
