--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "vitest --coverage",
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
+    "build:watch": "vite build --watch",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
@@ -25,6 +26,7 @@
   "dependencies": {
     "@vitejs/plugin-vue": "~4.0.0",
     "axios": "~1.2.2",
+    "blaze-slider": "^1.9.0",
     "pinia": "~2.0.28",
     "vite": "~4.0.3",
     "vue": "~3.2.45",
